# cli-rust

./: LICENSE  README.md  clean_all_target_dir.cmd  clean_all_target_dir.sh
.github/workflows/: rust.yml
calr/: Cargo.toml
calr/src/: lib.rs
calr/tests/: cli.rs
catr/: Cargo.toml
catr/src/: lib.rs  main.rs
commr/: Cargo.toml
commr/src/: lib.rs  main.rs
cutr/: Cargo.toml
cutr/src/: lib.rs
echor/: Cargo.toml
echor/tests/: cli.rs
findr/: Cargo.toml
findr/src/: lib.rs  main.rs
findr/tests/: cli.rs
fortuner/: Cargo.toml
fortuner/src/: lib.rs  main.rs
grepr/: Cargo.toml
grepr/src/: lib.rs
headr/: Cargo.toml
headr/src/: lib.rs  main.rs
headr/tests/: cli.rs
lsr/: Cargo.toml
lsr/src/: lib.rs  main.rs
tailr/: Cargo.toml
tailr/src/: lib.rs  main.rs
uniqr/: Cargo.toml
uniqr/src/: lib.rs  main.rs
wcr/: Cargo.toml
wcr/src/: lib.rs  main.rs
wcr/tests/: cli.rs
