[package]
name = "tailr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
num = "0.4"
once_cell = "1.19"
regex = "1.10"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
rand = "0.8"
